Clean CSS, Fix scrollbar issues when using Snap-scroll Integrate scrolling to animation (AboutUs.js, PoweredBy.js) Update structure.md

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+body{
+  margin: 0;
+  padding: 0;
+}
+
 /*Menu section*/
 .Menu-Dropdown-Button {
   background-color: white;
@@ -95,14 +100,40 @@
 }
 
 
-/*snapping elements*/
+/*snapping elements and scrollbar*/
 .snap-container {
   scroll-snap-type: y proximity;
   overflow: scroll;
+  overflow-x: hidden;
   height: 100vh;
 }
 
+body::-webkit-scrollbar {
+  width: 0px;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: transparent;
+}
+
+::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #d1d1e0;
+}
+
 .snap-child {
-  height: 100vh;
-  scroll-snap-align: start;
+  height: 100%;
+  scroll-snap-align: center;
 }
